# mwc-metal-miner

./: .gitignore  CMakeLists.txt  README.md
src/archive/: main2.cpp  main_memory_filling.cpp  sip_hash_simd.cpp  sip_hash_simd.h  sip_hash_simd4.cpp  sip_hash_simd4.h  sip_hash_simd6.cpp  sip_hash_simd6.h  sip_hash_simd8.cpp  sip_hash_simd8.h  sip_hash_simd_asm.cpp  sip_hash_simd_asm.h  sip_hash_simd_asm4.cpp  sip_hash_simd_asm4.h
src/miner/: bit_packer.h  bit_streamer.h  blake.cpp  blake.h  bucket.h  cuckatoo.cpp  cuckatoo.h  cuckatoo_pipeline.cpp  cuckatoo_pipeline.h  cycle.cpp  cycle.h  cycle_finder.cpp  cycle_finder.h  data_storage.h  events_tracker.h  features.h  inplace_bucket_sorting.h  main_cpu_miner.cpp  mem_pool.cpp  mem_pool.h  metal.cpp  metal.h  metal_code.cpp  metal_code.h  metal_context.cpp  metal_context.h  metal_context_discover.cpp  metal_context_discover.h  metal_context_phase1.cpp  metal_context_phase1.h  metal_context_phase2.cpp  metal_context_phase2.h  metal_structs.h  miner_network.cpp  miner_network.h  nonce_hash.h  row_builder.h  sip_hash.cpp  sip_hash.h  small_hash_table.h  (+6 more)
src/perf/: events_tracker.cpp  main_perf.cpp
src/tests/: bit_packer_test.cpp  bit_packer_test.h  bit_streamer_test.cpp  bit_streamer_test.h  blake_test.cpp  blake_test.h  cuckatoo_test.cpp  cuckatoo_test.h  data_dump.h  data_storage_test.cpp  data_storage_test.h  inplace_bucket_sorting_test.cpp  inplace_bucket_sorting_test.h  main_test.cpp  metal_test.cpp  metal_test.h  miner_network_test.cpp  miner_network_test.h  row_builder_test.cpp  row_builder_test.h  test_build_mask.cpp  test_build_mask.h  test_lean_miner.h  test_mem_pool.cpp  test_mem_pool.h  test_nonce_to_8b.cpp  test_nonce_to_8b.h  test_st1_build_buckets.cpp  test_st1_build_buckets.h  trimmer_test.cpp  trimmer_test.h
